--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -165,7 +165,6 @@ jobs:
         run: source .ci/docker.sh --build
 
       - name: Build ${{matrix.build_type}}${{ matrix.build_type == 'Debug' && ' and run Tests' || '' }}
-        if: matrix.package != 'skip' && matrix.build_type != 'Release'
         shell: bash
         env:
           BUILD_DIR: build
@@ -173,11 +172,16 @@ jobs:
           CMAKE_GENERATOR: '${{env.CMAKE_GENERATOR}}'
         run: |
           source .ci/docker.sh
-          if [[ "${{matrix.build_type}}" == "Debug" ]]; then
-            RUN --server --debug --test --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE"
-          else
+          # Release with packaging
+          if [[ "${{matrix.build_type}}" == "Release" && "${{matrix.package}}" != "skip" ]]; then
             RUN --server --release --package "${{matrix.package}}" --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE"
             .ci/name_build.sh
+          # Release without packaging
+          elif [[ "${{matrix.build_type}}" == "Release" ]]; then
+            RUN --server --release --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE"
+          # Debug & Test
+          else
+            RUN --server --debug --test --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE"
           fi
 
       - name: Save compiler cache (ccache)
