--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -29,17 +29,17 @@ concurrency:
   cancel-in-progress: ${{ github.ref_name != 'master' }}
 
 jobs:
-  configure:
-    name: Configure
+  configuration:
+    name: Configuration
     runs-on: ubuntu-latest
     outputs:
-      tag: ${{steps.configure.outputs.tag}}
-      sha: ${{steps.configure.outputs.sha}}
+      tag: ${{steps.set_references.outputs.tag}}
+      sha: ${{steps.set_references.outputs.sha}}
       build_types: ${{steps.set_build_types.outputs.build_types}}
 
     steps:  
-      - name: Configure
-        id: configure
+      - name: Define context references
+        id: set_references
         shell: bash
         run: |
           tag_regex='^refs/tags/'
@@ -48,44 +48,12 @@ jobs:
           elif [[ $GITHUB_REF =~ $tag_regex ]]; then    # release
             sha="$GITHUB_SHA"
             tag="${GITHUB_REF/refs\/tags\//}"
-            echo "tag=$tag" >>"$GITHUB_OUTPUT"
+            echo "tag=$tag" >> "$GITHUB_OUTPUT"
           else    # push to branch
             sha="$GITHUB_SHA"
           fi
-          echo "sha=$sha" >>"$GITHUB_OUTPUT"
+          echo "sha=$sha" >> "$GITHUB_OUTPUT"
 
-      - name: Checkout
-        if: steps.configure.outputs.tag != null
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Prepare release parameters
-        id: prepare
-        if: steps.configure.outputs.tag != null
-        shell: bash
-        env:
-          TAG: ${{steps.configure.outputs.tag}}
-        run: .ci/prep_release.sh
-
-      - name: Create release
-        if: steps.configure.outputs.tag != null
-        id: create_release
-        shell: bash
-        env:
-          GH_TOKEN: ${{github.token}}
-          tag_name: ${{steps.configure.outputs.tag}}
-          target: ${{steps.configure.outputs.sha}}
-          release_name: ${{steps.prepare.outputs.title}}
-          body_path: ${{steps.prepare.outputs.body_path}}
-          prerelease: ${{steps.prepare.outputs.is_beta}}
-        run: |
-          if [[ $prerelease == yes ]]; then
-            args="--prerelease"
-          fi
-          gh release create "$tag_name" --draft --verify-tag $args \
-              --target "$target" --title "$release_name" \
-              --notes-file "$body_path"
       - name: Define build types
         id: set_build_types
         shell: bash
@@ -98,12 +66,51 @@ jobs:
           fi
           echo "build_types=$build_types" >> $GITHUB_OUTPUT
 
+      - name: Checkout
+        if: steps.set_references.outputs.tag != null
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Prepare release parameters
+        id: prepare
+        if: steps.set_references.outputs.tag != null
+        shell: bash
+        env:
+          TAG: ${{steps.set_references.outputs.tag}}
+        run: .ci/prep_release.sh
+
+      - name: Create release
+        if: steps.set_references.outputs.tag != null
+        id: create_release
+        shell: bash
+        env:
+          GH_TOKEN: ${{github.token}}
+          tag_name: ${{steps.set_references.outputs.tag}}
+          target: ${{steps.set_references.outputs.sha}}
+          release_name: ${{steps.prepare.outputs.title}}
+          body_path: ${{steps.prepare.outputs.body_path}}
+          prerelease: ${{steps.prepare.outputs.is_beta}}
+        run: |
+          if [[ $prerelease == yes ]]; then
+            args="--prerelease"
+          fi
+          gh release create "$tag_name" --draft --verify-tag $args \
+              --target "$target" --title "$release_name" \
+              --notes-file "$body_path"
+
+      - name: Debug outputs
+        run: |
+          echo "::notice::tag=${{steps.set_references.outputs.tag}}"
+          echo "::notice::sha=${{steps.set_references.outputs.sha}}"
+          echo "::notice::build_types=${{steps.set_build_types.outputs.build_types}}"
+
   build-linux:
     strategy:
       fail-fast: false
       matrix:
         # Dynamically expand build matrix according to needed Release/Debug build types
-        build_type: ${{ fromJson(needs.configure.outputs.build_types) }}
+        build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
         # The below builds correspond to the files in ".ci/$distro$version"
         include:
           - distro: Arch
@@ -138,7 +145,7 @@ jobs:
             build_type: Release
 
     name: ${{matrix.distro}} ${{matrix.version}} ${{matrix.build_type}}
-    needs: configure
+    needs: configuration
     runs-on: ubuntu-latest
     continue-on-error: ${{matrix.allow-failure == 'yes'}}
     env:
@@ -202,11 +209,11 @@ jobs:
 
       - name: Upload to release
         id: upload_release
-        if: matrix.package != 'skip' && needs.configure.outputs.tag != null
+        if: matrix.package != 'skip' && needs.configuration.outputs.tag != null
         shell: bash
         env:
           GH_TOKEN: ${{github.token}}
-          tag_name: ${{needs.configure.outputs.tag}}
+          tag_name: ${{needs.configuration.outputs.tag}}
           asset_path: ${{steps.build.outputs.path}}
           asset_name: ${{steps.build.outputs.name}}
         run: gh release upload "$tag_name" "$asset_path#$asset_name"
@@ -229,7 +236,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ${{ fromJson(needs.configure.outputs.build_types) }}
+        build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
         exclude:
           - build_type: Debug
         include:
@@ -252,7 +259,7 @@ jobs:
             make_package: 1
 
     name: macOS ${{matrix.target}}${{ matrix.soc == 'Intel' && ' Intel' || '' }} ${{ matrix.build_type }}
-    needs: configure
+    needs: configuration
     runs-on: ${{matrix.os}}
     continue-on-error: ${{matrix.allow-failure == 'yes'}}
     env:
@@ -325,7 +332,7 @@ jobs:
           key: ${{ steps.ccache_restore.outputs.cache-primary-key }}
 
       - name: Sign app bundle
-        if: matrix.make_package && (github.ref == 'refs/heads/master' || needs.configure.outputs.tag != null)
+        if: matrix.make_package && (github.ref == 'refs/heads/master' || needs.configuration.outputs.tag != null)
         env:
           MACOS_CERTIFICATE_NAME: ${{ secrets.PROD_MACOS_CERTIFICATE_NAME }}
           MACOS_CI_KEYCHAIN_PWD: ${{ secrets.PROD_MACOS_CI_KEYCHAIN_PWD }}
@@ -337,7 +344,7 @@ jobs:
           fi
 
       - name: Notarize app bundle
-        if: matrix.make_package && (github.ref == 'refs/heads/master' || needs.configure.outputs.tag != null)
+        if: matrix.make_package && (github.ref == 'refs/heads/master' || needs.configuration.outputs.tag != null)
         env:
           MACOS_NOTARIZATION_APPLE_ID: ${{ secrets.PROD_MACOS_NOTARIZATION_APPLE_ID }}
           MACOS_NOTARIZATION_TEAM_ID: ${{ secrets.PROD_MACOS_NOTARIZATION_TEAM_ID }}
@@ -379,11 +386,11 @@ jobs:
 
       - name: Upload to release
         id: upload_release
-        if: matrix.make_package && needs.configure.outputs.tag != null
+        if: matrix.make_package && needs.configuration.outputs.tag != null
         shell: bash
         env:
           GH_TOKEN: ${{github.token}}
-          tag_name: ${{needs.configure.outputs.tag}}
+          tag_name: ${{needs.configuration.outputs.tag}}
           asset_path: ${{steps.build.outputs.path}}
           asset_name: ${{steps.build.outputs.name}}
         run: gh release upload "$tag_name" "$asset_path#$asset_name"
@@ -406,7 +413,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ${{ fromJson(needs.configure.outputs.build_types) }}
+        build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
         exclude:
           - build_type: Debug
         include:
@@ -420,7 +427,7 @@ jobs:
             qt_modules: "qtimageformats qtmultimedia qtwebsockets"
 
     name: Windows ${{matrix.target}}
-    needs: configure
+    needs: configuration
     runs-on: windows-2022
     env:
       CMAKE_GENERATOR: 'Visual Studio 17 2022'
@@ -486,11 +493,11 @@ jobs:
 
       - name: Upload to release
         id: upload_release
-        if: needs.configure.outputs.tag != null
+        if: needs.configuration.outputs.tag != null
         shell: bash
         env:
           GH_TOKEN: ${{github.token}}
-          tag_name: ${{needs.configure.outputs.tag}}
+          tag_name: ${{needs.configuration.outputs.tag}}
           asset_path: ${{steps.build.outputs.path}}
           asset_name: ${{steps.build.outputs.name}}
         run: gh release upload "$tag_name" "$asset_path#$asset_name"
