--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -114,6 +114,7 @@ jobs:
       matrix:
         # Dynamically expand build matrix according to needed Release/Debug build types
         build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+        distro: [Arch, Debian, Fedora, Ubuntu]
         # The below builds correspond to the files in ".ci/$distro$version"
         include:
           - distro: Arch
