--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -35,7 +35,7 @@ jobs:
     outputs:
       tag: ${{steps.set_references.outputs.tag}}
       sha: ${{steps.set_references.outputs.sha}}
-      build_types: ${{steps.set_build_types.outputs.build_types}}
+      build_type: ${{steps.set_build_type.outputs.build_type}}
 
     steps:  
       - name: Define context references
@@ -54,18 +54,17 @@ jobs:
           fi
           echo "sha=$sha" >> "$GITHUB_OUTPUT"
 
-      - name: Define build types
-        id: set_build_types
+      - name: Define build type
+        id: set_build_type
         shell: bash
         run: |
-          build_types='[\"Debug\"]'
-          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == "refs/heads/master" ]]; then
-            build_types='[\"Debug\", \"Release\"]'
-          elif [[ "${{ github.ref }}" =~ ^refs/tags/ ]]; then
-            build_types='[\"Release\"]'
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            build_type="Debug"
+          else
+            build_type="Release"
           fi
-          echo "build_types=$build_types" >> $GITHUB_OUTPUT
-          echo "DEBUG: build_types=$build_types"
+          echo "build_type=$build_type" >> $GITHUB_OUTPUT
+          echo "DEBUG: build_type=$build_type"
           ls -l $GITHUB_OUTPUT || true
           cat $GITHUB_OUTPUT || true
 
@@ -106,7 +105,7 @@ jobs:
         run: |
           echo "::notice::tag=${{steps.set_references.outputs.tag}}"
           echo "::notice::sha=${{steps.set_references.outputs.sha}}"
-          echo "::notice::build_types=${{steps.set_build_types.outputs.build_types}}"
+          echo "::notice::build_type=${{steps.set_build_type.outputs.build_type}}"
 
   build-linux:
     strategy:
@@ -117,37 +116,37 @@ jobs:
         include:
           - distro: Arch
             allow-failure: yes
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
           - distro: Debian
             version: 11
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
           - distro: Debian
             version: 12
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
           - distro: Fedora
             version: 41
             package: RPM
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
           - distro: Fedora
             version: 42
             package: RPM
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
           - distro: Ubuntu
             version: 22.04
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
           - distro: Ubuntu
             version: 24.04
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
 
         # exclude:
         #   - distro: Arch    # Exclude release build for Arch as we are packaged in the community repo already
@@ -183,7 +182,7 @@ jobs:
         shell: bash
         run: source .ci/docker.sh --build
 
-      - name: Build ${{matrix.build_type}}${{ matrix.build_type == 'Debug' && ' and run Tests' || '' }}
+      - name: Build ${{matrix.build_type}}${{ matrix.build_type == 'Debug' && ' and run tests' || '' }}
         shell: bash
         env:
           BUILD_DIR: build
@@ -245,7 +244,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+        build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
         exclude:
           - build_type: Debug
         include:
@@ -424,7 +423,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ${{ fromJson(needs.configuration.outputs.build_types) }}
+        build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
         exclude:
           - build_type: Debug
         include:
