--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -116,37 +116,37 @@ jobs:
         include:
           - distro: Arch
             allow-failure: yes
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
           - distro: Debian
             version: 11
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
           - distro: Debian
             version: 12
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
           - distro: Fedora
             version: 41
             package: RPM
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
           - distro: Fedora
             version: 42
             package: RPM
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
           - distro: Ubuntu
             version: 22.04
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
           - distro: Ubuntu
             version: 24.04
             package: DEB
-            build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+            build_type: ${{ needs.configuration.outputs.build_type }}
 
         # exclude:
         #   - distro: Arch    # Exclude release build for Arch as we are packaged in the community repo already
@@ -244,7 +244,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+        build_type: ${{ needs.configuration.outputs.build_type }}
         exclude:
           - build_type: Debug
         include:
@@ -423,7 +423,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: ${{ fromJson(needs.configuration.outputs.build_type) }}
+        build_type: ${{ needs.configuration.outputs.build_type }}
         exclude:
           - build_type: Debug
         include:
