--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -188,10 +188,10 @@ jobs:
           source .ci/docker.sh
           # Release + Package
           if [[ "${{matrix.build_type}}" == "Release" ]]; then
-            RUN --server --release --package "${{matrix.package}}" --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE"
+            RUN --server --package "${{matrix.package}}" --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE" --release
           # Debug + Test
           else
-            RUN --server --debug --test --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE"
+            RUN --server --package "${{matrix.package}}" --dir "$BUILD_DIR" --ccache "$CCACHE_SIZE" --debug --test
           .ci/name_build.sh
           fi
 
